# rust_actix_diesel_mysql_demo

./: .env  .gitignore  Cargo.toml  README.md
configs/: Settings.toml
migrations/2022-11-22-105344_create_posts/: down.sql  up.sql
src/: main.rs  settings.rs
src/api/: mod.rs  test_api.rs
src/database/: mod.rs  mysql.rs
src/models/: models.rs  schema.rs
src/service/: mod.rs  test_service.rs
