[package]
name = "rust_actix_diesel_mysql_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"
actix-web="4"
config = "0.13.1"
serde = "1.0.145"
serde_json = { version = "1.0.2", optional = true }
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter", "time", "local-time", ] }
dotenv = "0.15.0"

time = { version = "0.3.7", features = ["macros"] }
